--- a/style.css
+++ b/style.css
@@ -19,15 +19,27 @@ html, body {
 }
 
 main {
-  width: 80vw;
-  height: 40vw;
+  max-width: 50vw;
+  height: 60%;
   border: 3px solid #000;
   border-radius: 2rem;
   text-align: center;
+  display: inline-block;
+}
+
+@media (max-width: 800px) {
+  main h1 {
+    font-size: 1.5rem;
+  }
+}
+
+main p {
+  margin: 1rem 1rem;
+  padding: 0 2rem;
 }
 
 main form {
-  height: 30%;
+  height: 20%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -39,7 +51,21 @@ main form {
           justify-content: center;
 }
 
+@media (max-width: 800px) {
+  main form {
+    height: 10%;
+  }
+}
+
 main form input {
   width: 10rem;
+}
+
+main .result {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (1fr)[4];
+      grid-template-rows: repeat(4, 1fr);
+  display: inline-block;
 }
 /*# sourceMappingURL=style.css.map */
