--- a/style.sass
+++ b/style.sass
@@ -1,7 +1,7 @@
 *
     border: 1px solid #000
 
-html, body 
+html, body
     height: 100%
     width: 100%
     padding: 0
@@ -9,30 +9,36 @@ html, body
     display: flex
     justify-content: center
     align-items: center
-main 
-    max-width: 50vw
-    height: 60%
+main
+    max-width: 1300px
+    max-height: 1000px
+    min-height: 80%
     border: 3px solid #000
     border-radius: 2rem
     text-align: center
-    display: inline-block
-
+    display: grid
+    margin: 0 2rem
+    align-items: center
     @media(max-width: 800px)
         h1
             font-size: 1.5rem
-    p 
-        margin: 1rem 1rem
-        padding: 0 2rem
+        main
+            height: 80%
+    .rule
+        margin: 0 2rem
+        padding:  2rem
     form
         height: 20%
         display: flex
         align-items: center
         justify-content: center
-        @media(max-width: 800px) 
+        @media(max-width: 800px)
             height: 10%
         input
             width: 10rem
-    .result 
+    .result
         display: grid
-        grid-template-rows: repeat(4, 1fr)
-        display: inline-block
+        grid-template-rows: repeat(3, 1fr)
+        @media(max-width: 800px)
+            p
+                font-size: .8rem
