--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-* {
-  border: 1px solid #000;
-}
-
 html, body {
   height: 100%;
   width: 100%;
@@ -44,7 +40,7 @@ main {
 
 main .rule {
   margin: 0 2rem;
-  padding: 2rem;
+  padding: 0 2rem;
 }
 
 main form {
