--- a/style.sass
+++ b/style.sass
@@ -1,5 +1,5 @@
 *
-    border: 1px solid #000
+    // border: 1px solid #000
 
 html, body
     height: 100%
@@ -26,7 +26,7 @@ main
             height: 80%
     .rule
         margin: 0 2rem
-        padding:  2rem
+        padding: 0 2rem
     form
         height: 20%
         display: flex
