content edit ui improve

--- a/style.sass
+++ b/style.sass
@@ -25,7 +25,6 @@ main
         main
             height: 80%
     .rule
-        margin: 0 2rem
         padding: 0 2rem
     form
         height: 20%
@@ -39,6 +38,9 @@ main
     .result
         display: grid
         grid-template-rows: repeat(3, 1fr)
+        button
+            margin: auto
         @media(max-width: 800px)
             p
                 font-size: .8rem
+        
