--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ main {
 }
 
 main .rule {
-  margin: 0 2rem;
   padding: 0 2rem;
 }
 
@@ -71,6 +70,10 @@ main .result {
   display: grid;
   -ms-grid-rows: (1fr)[3];
       grid-template-rows: repeat(3, 1fr);
+}
+
+main .result button {
+  margin: auto;
 }
 
 @media (max-width: 800px) {
